--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>OttApp</title>
-  <base href="/">
+  <base href="https://pratikghodke17.github.io/Pratikghodke17.githhub.io/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="https://jep-asset.akamaized.net/jiostaticresources/v02/images/favicon.ico"
     type="image/x-icon" />
